kubernetes/bootstrap/argocd-image-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-image-updater
  template:
    metadata:
      labels:
        app: argocd-image-updater
    spec:
      serviceAccountName: argocd-image-updater
      containers:
        - name: argocd-image-updater
          image: quay.io/argoprojlabs/argocd-image-updater:v0.15.0
          imagePullPolicy: Always
          command:
            - /usr/local/bin/argocd-image-updater
            - run
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          volumeMounts:
            - name: ssh-known-hosts
              mountPath: /app/config/ssh
            - name: ssh-config
              mountPath: /app/.ssh
            - name: git-creds
              mountPath: /app/creds
              readOnly: true
            - name: ecr-login-script
              mountPath: /scripts
              readOnly: true
            - name: registries-conf
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: ssh-known-hosts
          configMap:
            name: argocd-ssh-known-hosts-cm
            optional: true
        - name: ssh-config
          configMap:
            name: argocd-image-updater-ssh-config
            optional: true
        - name: git-creds
          secret:
            secretName: git-creds
            optional: true
        - name: ecr-login-script
          configMap:
            name: ecr-login-script
            defaultMode: 0755
        - name: registries-conf
          configMap:
            name: argocd-image-updater-config
            items:
              - key: registries.conf
                path: registries.conf
